[project]
name = "vless"
version = "0.1.0"
description = ""
authors = [{ name = "darkon", email = "sautral67@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["aiohttp (>=3.13.2,<4.0.0)", "flet (>=0.28.3,<0.29.0)"]

[tool.poetry]
packages = [{ include = "vless", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"

[tool.poetry.scripts]
vless-checker = "checker:main"
