[tool.poetry]
name = "vless-checker"
version = "1.0.0"
description = "VLESS Server Checker with GUI"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{ include = "vless", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
flet = ">=0.24.0"
aiohttp = "^3.9.0"
pyinstaller = "~6.11.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[tool.poetry.scripts]
vless-checker = "vless.checker:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
